# voxelization_hpc

./: .TestPCAOnPoint_on_x.cachegrind.swp  .TestPCAOnPoint_on_z.cachegrind.swp  .gitignore  CMakeLists.txt  Doxyfile  Eigen  Notes.txt  Protein shapes.txt  README.md  Simulated Cache - Protein Exploration GITHUB.ipynb  Struttura cartelle.txt  TestBoolCacheEightBit.cachegrind  TestBoolCacheSixteenBit.cachegrind  TestBoolCacheSixtyFourBit.cachegrind  TestBoolCache_1a6w.cachegrind  TestBoolCache_Annealing.cachegrind  TestBoolONPoint.cachegrind  TestBoolONPointPerm4_on_X.cachegrind  TestBoolOnPoint_on_x.cachegrind  TestBoolOnPoint_on_z.cachegrind  TestBoolVectCache.cachegrind  TestPCACache.cachegrind  TestPCACachePerm1.cachegrind  TestPCACachePerm2.cachegrind  TestPCACachePerm3.cachegrind  TestPCACachePerm4.cachegrind  TestPCACachePerm5.cachegrind  TestPCACachePerm5_1a6w.cachegrind  TestPCACachePerm5_Annealing.cachegrind  TestPCAONPoint.cachegrind  TestPCAONPointPerm4.cachegrind  TestPCAONPointPerm4_on_X.cachegrind  TestPCAONPointPerm5.cachegrind  TestPCAONPoint_on_x.cachegrind  TestPCAOnPointPerm1_on_x.cachegrind  TestPCAOnPointPerm4_on_Y.cachegrind  TestPCAOnPointPerm5_fake_on_x.cachegrind  TestPCAOnPointPerm5_on_x.cachegrind  TestPCAOnPointPerm5_on_z.cachegrind  TestPCAOnPoint_on_x.cachegrind  (+141 more)
Paths/: Annealing_path1683760222.390384.csv  Annealing_path1683760264.756109.csv  Annealing_path1683760269.7239888.csv  Annealing_path1683760282.20603.csv  Annealing_path1683760286.882894.csv  Annealing_path1683760291.9835198.csv  Annealing_path1683760296.2951968.csv  Annealing_path1683760300.7311826.csv  Annealing_path1683760305.914496.csv  Annealing_path1683760310.3458626.csv  Annealing_path1683760313.9331667.csv  Annealing_path1683760318.1436665.csv  Annealing_path1683760325.406484.csv  Annealing_path1683760329.221857.csv  Annealing_path1683760332.7970624.csv  Annealing_path1683760335.9342358.csv  Annealing_path1683760339.6296988.csv  Annealing_path1683760343.3627963.csv  Annealing_path1683760348.9152267.csv  Annealing_path1683760352.7997973.csv  Annealing_path1683760355.977974.csv  Annealing_path1683760359.3260796.csv  Annealing_path1683760363.199812.csv
html/: BoolVector_8h_source.html  Coordinate_8h_source.html  CovarianceEigen_8hpp_source.html  IR_8h_source.html  Parser_8h_source.html  Perm__Traits_8hpp_source.html  Structure_8h_source.html  Utilities_8h_source.html  VoxelGrid_8h_source.html  annotated.html  classBoolVector-members.html  (+36 more)
(+105 files in other folders)
